# sneaking-in-funkhaus

./: CMakeLists.txt  README.md  create_package.sh
Source/: GlimmerEngine.h  MicModeller.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ui.html
ui/: inline_assets.py  package-lock.json  package.json
ui/src/: App.css  App.jsx  index.css
ui/src/components/: AcousticMaterials.jsx  Knob.jsx  MixSlider.jsx  ModeSelector.jsx  PresetManager.jsx  RoomPresets.jsx  Visualizer.jsx
